# trilium-addons

./: .gitignore  README.md  go.mod  pyproject.toml
TaskManager/: archiveDoneTask.js  email_weekly_status.sh  jiraWidget.js  jira_sla.py  overdueTask.js  sprintEpics.py  sprint_epics.py  task.py  tm.py
archiveDoneTask/: archiveDoneTask.js
bugSLA/: bugSLA.py
fileNote/: diffNote.py  pushToNote.py
gistMirror/: gistMirror.js
pushToNote/: diffNote.py  pushToNote.py
