[project]
authors = [{ name = 'Jhon Honce' }]
dependencies = [
    "beautifulsoup4>=4.12.2",
    "jira>=3.5.2",
    "pydantic>=1.10.12",
    "trilium-alchemy>=0.1.7",
    "trilium-py>=0.8.3",
    "typer>=0.9.0",
    "urllib3>=2.0.4",
]
description = "Trilium note taking app addons"
license = "Apache-2.0"
name = 'trilium-addons'
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.0"
